[gd_scene load_steps=3 format=3 uid="uid://db7ivbc6si385"]

[ext_resource type="Script" path="res://päkapikk.gd" id="1_vpqf3"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_0it8u"]
frames = 4
frame_1/duration = 1.0
frame_2/duration = 1.0
frame_3/duration = 1.0

[node name="Päkapikk" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1140.0
offset_bottom = -628.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vpqf3")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 148.0
offset_bottom = 149.0
icon = SubResource("AnimatedTexture_0it8u")
flat = true
expand_icon = true

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
